<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title">Italian Nap - Doze and wake in rural Tuscany</string>
    <string name="app_name">Italian Nap</string>
    <string name="text_nap_time">Your nap time:</string>
   
    <string-array name="napp_time_array">  
	<item>10</item>
	<item>15</item>
	<item>20</item>
	<item>25</item>
	<item>30</item>
	<item>40</item>
	<item>50</item>
	<item>60</item>
	<item>80</item>
	<item>100</item>
	<item>120</item>
	</string-array>
    
   <string name="text_nap_start_sound">The sound that will put you slowly asleep:</string> 
     <string name="tekst_zoekbar">Nap time in minutes: </string> 
     <string name="sound_silence">Silence</string>
    <string name="sound_sea">Sea</string>
    <string name="sound_grasshoppers">Crickets</string>
	<string name="sound_forest">Forest</string>
	
	 <string name="text_nap_slowly_wakeup_sound">The sound that will bring you gently back to this world:</string> 
	 <string name="text_nap_final_wakeup_sound">Your final wake up call:</string>
	  
	 <string name="wakeup_callas">Maria Callas</string>
	 <string name="wakeup_bell1">Tuscan churchbell </string>
	 <string name="wakeup_zen_bell">Tiny cloister bells</string>
	  <string name="wakeup_waky_waky">Andiamo!</string>
	   <string name="start_button">Start/Stop</string> 
	   <string name="explanation">- ? - </string>
	    <string name="back">back</string>
	     <string name="explanation_content">If you want to escape to the rural fields of Tuscany for a short nap, this app is your solution.
	         You can choose three carefully designed rural soundscapes to doze off with. After two minutes the sound will gradually fade away and the screen will turn in a dark starry night, leaving you in the arms of Morpheus.\n \nTwo minutes before waking time, your preferred wake up sound will slowly fade in. Finally, you are brought back to reality with your preferred wake up call and a bright screen. 
	         This final wake up call is set to maximum volume, to make sure that you will wake up indeed.\n \nCheck if your battery is sufficiently charged, otherwise your device will fall asleep itself and is unable to wake you!
	        </string>  
	        
	       <string name="explanation_content2">If you have any remarks about this app, please contact the designer at: info@robertloeberdevelopment.nl
	        </string>
	        
	       <string name="explanation_credits">This app uses sounds from www.freesound.org:\nChurchbell by Daddoit( http://freesound.org/people/daddoit )\nSea by inchadney
	         ( http://freesound.org/people/inchadney )\nSea by Eelke (http://freesound.org/people/eelke)\nForest by inchadney( http://freesound.org/people/inchadney )\nCrickets by Rhapsodize( http://freesound.org/people/rhapsodize )\nTiny bell by Syna-max( http://freesound.org/people/Syna-max )\nAndiamo composed by Robert Loeber\nCallas by Callas
				
	           </string> 
	   
</resources>